Updated Boot Version to 3.0.0